Dropdown Navigation Styled
Navigation windows styled, specifically with flat shadow effect

--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
 	<header>
 		<nav class="clearfix">
 			<div class="nav-region nav-nca"><span class="nav-explore">EXPLORE</span> NORTHERN CALIFORNIA</div>
-			<div class="nav-hover "
 				<div class="nav-rule"></div>
 			<div class="nav-region nav-cca"><span class="nav-explore">EXPLORE</span> CENTRAL CALIFORNIA</div>
 				<div class="nav-rule"></div>
@@ -28,7 +27,41 @@
 			<div class="nav-progress-bar"></div>
 			<div class="nav-status-bar"></div>
 		</nav>
+		<div class="nav-hover-wrapper">
+			<div class="nav-hover-menu nav-hover-nca">
+				<span class="nav-explore">EXPLORE</span> NORTHERN CALIFORNIA
+				<ul class="nav-dropdown">
+					<li>Must-See Kid-Friendly Attractions</li>
+					<li>Camp California</li>
+					<li>Photo Op: 4 Share-Worthy NoCal Spots</li>
+					<li>Anti-Are We There Yet Road Trip</li>
+				</ul>
+			</div>
+		</div>
 	</header>
+
+	<div class="lorem" style="font-size: 18px">
+		She wanted to look 48. I nearly airbrushed her into oblivion. Ended up checking "albino" on the form. Dad asked me to do this on the day he pleads not guilty, as a spectacular protest. A…. ? Teamocil. So maybe you could start jete-ing, and stop je-terrorizing me! I'm tired of trying to find happiness through lies and self-medicating. If you need me, I'll be at the bar. I may have committed some light treason. There's a new daddy in town. A discipline daddy. 
+
+But I did finally get into Dad's pants. Although I had to have the crotch taken in a little bit. She keeps saying that God is going to show me a sign. The… something of my ways. Wisdom? NO TOUCHING! They're not gonna strip, right? I told them not to, but I can't guarantee their instincts won't kick in. Well, they got the Asian right… "hotties" might be a stretch. She keeps saying that God is going to show me a sign. The… something of my ways. Wisdom? It's probably wisdom. 
+
+I've been in the film business for a while but I just can't seem to get one in the can. Make love in your *own* hand, Mother! There are very few intelligent, attractive and straight men in this town. Well, that certainly leaves me out. Let me take off my assistant's skirt and put on my Barbra-Streisand-in-The-Prince-of-Tides ass-masking therapist pantsuit. 
+
+What a fun, sexy time for you. Friday night. She's trying to prove that she's closer to my children than I am, but the joke's on her, because she doesn't know how little I care for GOB. I'm a complete failure. I can't even fake the death of a stripper. One for the ladies. I'm not a prostitute. Then I shall let you live! What's gotten into you? Have you been eating cheese? 
+
+Ann, you need to decide whether you want a man or a boy. I know how I'd answer. I [bleeped] the business model. Yeah, she had all kinds of orgasms. Don't leave your Uncle T-bag hanging. It was for me. I was going to smoke the marijuana like a cigarette. Yeah, like anyone would want to R her. 
+
+The worst that could happen is that I could spill coffee all over this $3,000 suit. COME ON. If this were a Lifetime Moment of Truth movie, this would be our act break.  But it wasn't. No, it's the opposite. It's like my heart is getting hard. Sister's my new mother, Mother. And is it just me or is she looking hotter? Can't a guy call his mother pretty without it seeming strange? Amen. And how about that little piece of tail on her? Cute! 
+
+Let me out that Queen. Up yours, granny! You couldn't handle it! What's up, fizz-ellas. Mr. Zuckerkorn, you've been warned about touching. You said spanking. How do you know Steve Holt? Are you in AA? We'll have to find something to do so that people can look at you without wanting to kill themselves. 
+
+It was for me. I was going to smoke the marijuana like a cigarette. Oh please. They didn't sneak into this country to be your friends. There are dozens of us! Dozens! Or it could be your colon. I'd want to get in there and find some answers. Chickens don't clap! I'll have a vodka rocks. (Mom, it's breakfast time.) And a piece of toast. The guy runs a prison, he can have any piece of ass he wants. I was set up. By the Brits. A group of British builders operating outside the O.C. 
+
+We need a name. Maybe 'Operation Hot Mother'. Wow, this is the best free scrapbooking class I've ever taken!  ps This one really cracks me up for some reason. No, Pop-pop does not get a treat. I just bought you a f**king pizza. Caw ca caw, caw ca caw, caw ca caw, caw ca caw. I spent so much time making sweet love on my wife that it's hard to hear anything over the clatter of her breasts. Did you enjoy your lunch, mom? You drank it fast enough. 
+
+And although the intervention didn't work, it turned into one of the Bluth family's better parties. [sniffs hand] Oh, God. I'm going to run this through again on "pots and pans." Aren't you the sweetest thing, spending time with what's left of your uncle. I don't care if it takes from now till the end of Shrimpfest. You're losing blood, aren't you? Probably, my socks are wet. [Stabbing Gob] White power! Gob: I'm white! What's gotten into you? Have you been eating cheese?  Hahahahah! 
+
+</div>
 
 </body>
 
