Styled Dropdown Button
Proper font and background FPO. Need help on white dividers.

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
 	});
 </script>
 
-<section class="sticky-nav">
+<section class="sticky-nav clearfix">
 	<div class="dropdown">
-	  <button class="btn dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-	    Dropdown
+	  <button class="btn dropdown-toggle nav-nca" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+	    <span class="nav-explore">EXPLORE</span> NORTHERN CALIFORNIA
 	    <span class="caret"></span>
 	  </button>
 	  <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
@@ -41,9 +41,10 @@
 	    <li><a href="#">Separated link</a></li>
 	  </ul>
 	</div>
+	<div class="nav-rule"></div>
 	<div class="dropdown">
-	  <button class="btn dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-	    Dropdown
+	  <button class="btn dropdown-toggle nav-cca" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+	    <span class="nav-explore">EXPLORE</span> CENTRAL CALIFORNIA
 	    <span class="caret"></span>
 	  </button>
 	  <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
@@ -54,9 +55,10 @@
 	    <li><a href="#">Separated link</a></li>
 	  </ul>
 	</div>
+	<div class="nav-rule"></div>
 	<div class="dropdown">
-	  <button class="btn dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-	    Dropdown
+	  <button class="btn dropdown-toggle nav-sca" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+	    <span class="nav-explore">EXPLORE</span> SOUTHERN CALIFORNIA
 	    <span class="caret"></span>
 	  </button>
 	  <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
