--- a/index.html
+++ b/index.html
@@ -34,11 +34,18 @@
 	    <span class="caret"></span>
 	  </button>
 	  <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-	    <li><a href="#">Action</a></li>
-	    <li><a href="#">Another action</a></li>
-	    <li><a href="#">Something else here</a></li>
+	  	<li class="nav-blogger"><a href="#">
+	  		<div class="blogger-circle"></div>
+	  		<span class="blogger-name">Brandi Riley</span></br>
+	  		Headline TK</a></li>
+	  	<li role="separator" class="divider"></li>
+	    <li><a href="#">Camp California</a></li>
 	    <li role="separator" class="divider"></li>
-	    <li><a href="#">Separated link</a></li>
+	    <li><a href="#">TK Kid Friendly Attractions</a></li>
+	    <li role="separator" class="divider"></li>
+	    <li><a href="#">Photo Op: Share-Worthy Northern California Spots</a></li>
+	    <li role="separator" class="divider"></li>
+	    <li><a href="#">The Anti “Are We There Yet?” Road Trip</a></li>
 	  </ul>
 	</div>
 	<div class="nav-rule"></div>
@@ -69,6 +76,8 @@
 	    <li><a href="#">Separated link</a></li>
 	  </ul>
 	</div>
+	<div class="nav-progress-bar"></div>
+	<div class="nav-status-bar"></div>
 </section>
 
 <header style="display:none;">
