Fixed Hover Button
Background image now blue; populated content of each hover state

--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
 	    <span class="caret"></span>
 	  </button>
 	  <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+	  	<li class="btn"><span class="nav-explore">EXPLORE</span> NORTHERN CALIFORNIA
+		<span class="caret"></span></li>
+	  	<div class="invisible-hover"></div>
 	  	<li class="nav-blogger"><a href="#">
 	  		<div class="blogger-circle"></div>
 	  		<span class="blogger-name">Brandi Riley</span></br>
@@ -55,11 +58,21 @@
 	    <span class="caret"></span>
 	  </button>
 	  <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-	    <li><a href="#">Action</a></li>
-	    <li><a href="#">Another action</a></li>
-	    <li><a href="#">Something else here</a></li>
+	  	<li class="btn"><span class="nav-explore">EXPLORE</span> CENTRAL CALIFORNIA
+		<span class="caret"></span></li>
+	  	<div class="invisible-hover"></div>
+	  	<li class="nav-blogger"><a href="#">
+	  		<div class="blogger-circle"></div>
+	  		<span class="blogger-name">Patti Cordova</span></br>
+	  		Headline TK</a></li>
+	  	<li role="separator" class="divider"></li>
+	    <li><a href="#">Edu(va)cation</a></li>
 	    <li role="separator" class="divider"></li>
-	    <li><a href="#">Separated link</a></li>
+	    <li><a href="#">#EEEEEATS: Family-Friendly Spots in Central California</a></li>
+	    <li role="separator" class="divider"></li>
+	    <li><a href="#">Get to Know Central California</a></li>
+	    <li role="separator" class="divider"></li>
+	    <li><a href="#">4 Outdoor Adventures in Central California</a></li>
 	  </ul>
 	</div>
 	<div class="nav-rule"></div>
@@ -69,11 +82,21 @@
 	    <span class="caret"></span>
 	  </button>
 	  <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-	    <li><a href="#">Action</a></li>
-	    <li><a href="#">Another action</a></li>
-	    <li><a href="#">Something else here</a></li>
+	  	<li class="btn"><span class="nav-explore">EXPLORE</span> SOUTHERN CALIFORNIA
+		<span class="caret"></span></li>
+	  	<div class="invisible-hover"></div>
+	  	<li class="nav-blogger"><a href="#">
+	  		<div class="blogger-circle"></div>
+	  		<span class="blogger-name">Justine Howell</span></br>
+	  		Headline TK</a></li>
+	  	<li role="separator" class="divider"></li>
+	    <li><a href="#">Surf ’n Skate</a></li>
 	    <li role="separator" class="divider"></li>
-	    <li><a href="#">Separated link</a></li>
+	    <li><a href="#">Surf ’n Skate</a></li>
+	    <li role="separator" class="divider"></li>
+	    <li><a href="#">Thrills, Chills, and Enchantments</a></li>
+<!-- 	    <li role="separator" class="divider"></li>
+	    <li><a href="#">The Anti “Are We There Yet?” Road Trip</a></li> -->
 	  </ul>
 	</div>
 	<div class="nav-progress-bar"></div>
