--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 	  		<span class="blogger-name">Justine Howell</span></br>
 	  		Headline TK</a></li>
 	  	<li role="separator" class="divider"></li>
-	    <li><a href="#">Surf ’n Skate</a></li>
+	    <li><a href="#">6 Kid-Friendly Southern California Beaches</a></li>
 	    <li role="separator" class="divider"></li>
 	    <li><a href="#">Surf ’n Skate</a></li>
 	    <li role="separator" class="divider"></li>
