--- a/index.html
+++ b/index.html
@@ -103,36 +103,33 @@
 	<div class="nav-status-bar"></div>
 </section>
 
-<header style="display:none;">
-	<nav class="clearfix">
-		<div class="nav-region nav-nca"><span class="nav-explore">EXPLORE</span> NORTHERN CALIFORNIA</div>
-			<div class="nav-rule"></div>
-		<div class="nav-region nav-cca"><span class="nav-explore">EXPLORE</span> CENTRAL CALIFORNIA</div>
-			<div class="nav-rule"></div>
-		<div class="nav-region nav-sca"><span class="nav-explore">EXPLORE</span> SOUTHERN CALIFORNIA</div>
-		<div class="nav-progress-bar"></div>
-		<div class="nav-status-bar"></div>
-	</nav>
-	<div class="nav-hover-wrapper">
-		<div class="nav-hover-menu nav-hover-nca">
-			<span class="nav-explore">EXPLORE</span> NORTHERN CALIFORNIA
-			<ul class="nav-dropdown">
-				<li>Must-See Kid-Friendly Attractions</li>
-				<li>Camp California</li>
-				<li>Photo Op: 4 Share-Worthy NoCal Spots</li>
-				<li>Anti-Are We There Yet Road Trip</li>
-			</ul>
-		</div>
-	</div>
-</header>
-
 <section class="main-hero full-page"></section>
 
-<section class="container-fluid toc">
+<section class="container-fluid toc clearfix">
 	<div class="row">
-		<div class="col-md-4"></div>
-		<div class="col-md-4"></div>
-		<div class="col-md-4"></div>
+		<div class="col-md-4">
+			<ul class="toc-menu">
+	  			<li class="nav-explore">EXPLORE</li>
+	  			<li class="toc-region">NORTHERN CALIFORNIA</li>
+	  			<li class="toc-blogger"><a href="#">
+	  				<div class="blogger-circle"></div><span class="toc-with">with</span></br>
+	  				Brandi Riley</a></li>
+	  			<li class="toc-plus">plus</li>
+	    		<li><a href="#">Camp California</a></li>
+	    		<li role="separator" class="divider"></li>
+	    		<li><a href="#">TK Kid Friendly Attractions</a></li>
+	    		<li role="separator" class="divider"></li>
+	    		<li><a href="#">Photo Op: Share-Worthy Northern California Spots</a></li>
+	    		<li role="separator" class="divider"></li>
+	    		<li><a href="#">The Anti “Are We There Yet?” Road Trip</a></li> 
+	  </ul>
+		</div>
+		<div class="col-md-4">
+			
+		</div>
+		<div class="col-md-4">
+			
+		</div>
 	</div>
 </section>
 
