--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
 <section class="container-fluid toc clearfix">
 	<div class="row">
-		<div class="col-md-4">
+		<div class="col-md-4 toc-nca">
 			<ul class="toc-menu">
 	  			<li class="nav-explore">EXPLORE</li>
 	  			<li class="toc-region">NORTHERN CALIFORNIA</li>
@@ -122,7 +122,7 @@
 	    		<li><a href="#">Photo Op: Share-Worthy Northern California Spots</a></li>
 	    		<li role="separator" class="divider"></li>
 	    		<li><a href="#">The Anti “Are We There Yet?” Road Trip</a></li> 
-	  </ul>
+	  		</ul>
 		</div>
 		<div class="col-md-4">
 			
