ToC Background Photos Placed
+hide caret on hover of nav
+nav photos added

--- a/index.html
+++ b/index.html
@@ -124,11 +124,39 @@
 	    		<li><a href="#">The Anti “Are We There Yet?” Road Trip</a></li> 
 	  		</ul>
 		</div>
-		<div class="col-md-4">
-			
+		<div class="col-md-4 toc-cca">
+			<ul class="toc-menu">
+	  			<li class="nav-explore">EXPLORE</li>
+	  			<li class="toc-region">NORTHERN CALIFORNIA</li>
+	  			<li class="toc-blogger"><a href="#">
+	  				<div class="blogger-circle"></div><span class="toc-with">with</span></br>
+	  				Patti Cordova</a></li>
+	  			<li class="toc-plus">plus</li>
+			    <li><a href="#">Edu(va)cation</a></li>
+	    		<li role="separator" class="divider"></li>
+	    		<li><a href="#">#EEEEEATS: Family-Friendly Spots in Central California</a></li>
+	    		<li role="separator" class="divider"></li>
+	    		<li><a href="#">Get to Know Central California</a></li>
+	    		<li role="separator" class="divider"></li>
+	    		<li><a href="#">4 Outdoor Adventures in Central California</a></li>
+	  		</ul>
 		</div>
-		<div class="col-md-4">
-			
+		<div class="col-md-4 toc-sca">
+			<ul class="toc-menu">
+	  			<li class="nav-explore">EXPLORE</li>
+	  			<li class="toc-region">NORTHERN CALIFORNIA</li>
+	  			<li class="toc-blogger"><a href="#">
+	  				<div class="blogger-circle"></div><span class="toc-with">with</span></br>
+	  				Justine Howell</a></li>
+	  			<li class="toc-plus">plus</li>
+	  			<li><a href="#">6 Kid-Friendly Southern California Beaches</a></li>
+	    		<li role="separator" class="divider"></li>
+	    		<li><a href="#">Surf ’n Skate</a></li>
+	    		<li role="separator" class="divider"></li>
+	    		<li><a href="#">Thrills, Chills, and Enchantments</a></li>
+	    		<li role="separator" class="divider"></li>
+	    		<li><a href="#">Bella Video</a></li>
+	  		</ul>
 		</div>
 	</div>
 </section>
