Fixed Nav Toggleable
Fixed navigation hide/shows based on whether you have scrolled past
ToC, and is responsive.
-no animations added to hide/show but looks fine IMHO

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<link type="text/css"; rel="stylesheet"; href="css/normalize.css">
 	<link type="text/css"; rel="stylesheet"; href="css/reset.css">
 	<link type="text/css"; rel="stylesheet"; href="css/style.css">
-	<link rel="icon" href="assets/favicon.png">
+	<!-- <link rel="icon" href="assets/favicon.png"> -->
 	<title>State of Play</title>
 </head>
 <body>
@@ -27,7 +27,65 @@
 	});
 </script>
 
-<section class="sticky-nav clearfix">
+<section class="main-hero full-page"></section>
+
+<section class="container-fluid toc clearfix" id="toc">
+	<div class="row">
+		<div class="col-md-4 toc-nca">
+			<ul class="toc-menu">
+	  			<li class="nav-explore">EXPLORE</li>
+	  			<li class="toc-region">NORTHERN CALIFORNIA</li>
+	  			<li class="toc-blogger"><a href="#">
+	  				<div class="blogger-circle"></div><span class="toc-with">with</span></br>
+	  				Brandi Riley</a></li>
+	  			<li class="toc-plus">plus</li>
+	    		<li><a href="#">Camp California</a></li>
+	    		<li role="separator" class="divider"></li>
+	    		<li><a href="#">TK Kid Friendly Attractions</a></li>
+	    		<li role="separator" class="divider"></li>
+	    		<li><a href="#">Photo Op: Share-Worthy Northern California Spots</a></li>
+	    		<li role="separator" class="divider"></li>
+	    		<li><a href="#">The Anti “Are We There Yet?” Road Trip</a></li> 
+	  		</ul>
+		</div>
+		<div class="col-md-4 toc-cca">
+			<ul class="toc-menu">
+	  			<li class="nav-explore">EXPLORE</li>
+	  			<li class="toc-region">NORTHERN CALIFORNIA</li>
+	  			<li class="toc-blogger"><a href="#">
+	  				<div class="blogger-circle"></div><span class="toc-with">with</span></br>
+	  				Patti Cordova</a></li>
+	  			<li class="toc-plus">plus</li>
+			    <li><a href="#">Edu(va)cation</a></li>
+	    		<li role="separator" class="divider"></li>
+	    		<li><a href="#">#EEEEEATS: Family-Friendly Spots in Central California</a></li>
+	    		<li role="separator" class="divider"></li>
+	    		<li><a href="#">Get to Know Central California</a></li>
+	    		<li role="separator" class="divider"></li>
+	    		<li><a href="#">4 Outdoor Adventures in Central California</a></li>
+	  		</ul>
+		</div>
+		<div class="col-md-4 toc-sca">
+			<ul class="toc-menu">
+	  			<li class="nav-explore">EXPLORE</li>
+	  			<li class="toc-region">NORTHERN CALIFORNIA</li>
+	  			<li class="toc-blogger"><a href="#">
+	  				<div class="blogger-circle"></div><span class="toc-with">with</span></br>
+	  				Justine Howell</a></li>
+	  			<li class="toc-plus">plus</li>
+	  			<li><a href="#">6 Kid-Friendly Southern California Beaches</a></li>
+	    		<li role="separator" class="divider"></li>
+	    		<li><a href="#">Surf ’n Skate</a></li>
+	    		<li role="separator" class="divider"></li>
+	    		<li><a href="#">Thrills, Chills, and Enchantments</a></li>
+	    		<li role="separator" class="divider"></li>
+	    		<li><a href="#">Bella Video</a></li>
+	  		</ul>
+		</div>
+	</div>
+</section>
+
+<section class="sticky-nav clearfix" id="sticky-nav">
 	<div class="dropdown">
 	  <button class="btn dropdown-toggle nav-nca" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
 	    <span class="nav-explore">EXPLORE</span> NORTHERN CALIFORNIA
@@ -101,64 +159,6 @@
 	</div>
 	<div class="nav-progress-bar"></div>
 	<div class="nav-status-bar"></div>
-</section>
-
-<section class="main-hero full-page"></section>
-
-<section class="container-fluid toc clearfix">
-	<div class="row">
-		<div class="col-md-4 toc-nca">
-			<ul class="toc-menu">
-	  			<li class="nav-explore">EXPLORE</li>
-	  			<li class="toc-region">NORTHERN CALIFORNIA</li>
-	  			<li class="toc-blogger"><a href="#">
-	  				<div class="blogger-circle"></div><span class="toc-with">with</span></br>
-	  				Brandi Riley</a></li>
-	  			<li class="toc-plus">plus</li>
-	    		<li><a href="#">Camp California</a></li>
-	    		<li role="separator" class="divider"></li>
-	    		<li><a href="#">TK Kid Friendly Attractions</a></li>
-	    		<li role="separator" class="divider"></li>
-	    		<li><a href="#">Photo Op: Share-Worthy Northern California Spots</a></li>
-	    		<li role="separator" class="divider"></li>
-	    		<li><a href="#">The Anti “Are We There Yet?” Road Trip</a></li> 
-	  		</ul>
-		</div>
-		<div class="col-md-4 toc-cca">
-			<ul class="toc-menu">
-	  			<li class="nav-explore">EXPLORE</li>
-	  			<li class="toc-region">NORTHERN CALIFORNIA</li>
-	  			<li class="toc-blogger"><a href="#">
-	  				<div class="blogger-circle"></div><span class="toc-with">with</span></br>
-	  				Patti Cordova</a></li>
-	  			<li class="toc-plus">plus</li>
-			    <li><a href="#">Edu(va)cation</a></li>
-	    		<li role="separator" class="divider"></li>
-	    		<li><a href="#">#EEEEEATS: Family-Friendly Spots in Central California</a></li>
-	    		<li role="separator" class="divider"></li>
-	    		<li><a href="#">Get to Know Central California</a></li>
-	    		<li role="separator" class="divider"></li>
-	    		<li><a href="#">4 Outdoor Adventures in Central California</a></li>
-	  		</ul>
-		</div>
-		<div class="col-md-4 toc-sca">
-			<ul class="toc-menu">
-	  			<li class="nav-explore">EXPLORE</li>
-	  			<li class="toc-region">NORTHERN CALIFORNIA</li>
-	  			<li class="toc-blogger"><a href="#">
-	  				<div class="blogger-circle"></div><span class="toc-with">with</span></br>
-	  				Justine Howell</a></li>
-	  			<li class="toc-plus">plus</li>
-	  			<li><a href="#">6 Kid-Friendly Southern California Beaches</a></li>
-	    		<li role="separator" class="divider"></li>
-	    		<li><a href="#">Surf ’n Skate</a></li>
-	    		<li role="separator" class="divider"></li>
-	    		<li><a href="#">Thrills, Chills, and Enchantments</a></li>
-	    		<li role="separator" class="divider"></li>
-	    		<li><a href="#">Bella Video</a></li>
-	  		</ul>
-		</div>
-	</div>
 </section>
 
 <section class="region-hero full-page"></section>
