Basic SVG title treatment created
I put together and styled the SVG of the title treatment. It’s static
for the moment, later I’ll attempt to turn the region box into a
dropdown menu that will trigger the vertical carousel.

--- a/index.html
+++ b/index.html
@@ -103,7 +103,11 @@
 	<div class="nav-status-bar"></div>
 </section>
 
-<section class="main-hero full-page"></section>
+<section class="main-hero full-page">
+	<svg class="title-trtmnt" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 714.6 424.6">
+	<polygon class="st0" points="714.6 212.3 357 424.6 0 212.3 357.3 0 "/><polygon class="st1" points="695.2 212.3 356.8 413.2 19 212.3 357.1 11.4 "/><text transform="matrix(1 0 0 1 267.073 121.6203)" class="state">state</text><text transform="matrix(1 0 0 1 267.1209 202.5311)" class="play">play</text><line class="st6" x1="273.8" y1="140.3" x2="333.8" y2="140.3"/><line class="st6" x1="380.8" y1="140.3" x2="440.8" y2="140.3"/><text transform="matrix(1 0 0 1 345.5594 147.7191)" class="of italc">of</text><rect x="164.5" y="225.7" class="st9" width="385.5" height="68.2"/><text transform="matrix(1 0 0 1 180.3961 237.5967)"><tspan class="dek">Discover why a trip to California makes the ultimate </tspan><tspan x="-13.1" y="20" class="dek">family vacation. Explore northern, central, and southern </tspan><tspan x="88.4" y="40" class="dek">California’s places to play.</tspan></text><text transform="matrix(1 0 0 1 277.9373 356.616)" class="california">California</text><text transform="matrix(1 0 0 1 286.526 323.2844)" class="southern italc">southern</text><rect x="279.7" y="299.7" class="st1" width="155.2" height="31.5"/><polygon points="418 312.8 427.8 312.8 422.9 308.1 "/><polygon points="418 317.5 427.8 317.5 422.9 322.3 "/><polygon points="342.9 386.9 371.6 386.9 357.2 395 "/>
+	</svg>
+</section>
 
 <section class="container-fluid toc clearfix">
 	<div class="row">
