Box and Text Stylings
Styled boxes and text for story.
-Vertical border hack coming from Shannon
…realizing to be parallax will probably require creating additional
wrapper around each box to house images….

--- a/index.html
+++ b/index.html
@@ -231,6 +231,66 @@
 	</div>
 </section> 
 
+<section class="bg-img-container-wrap" id="article-roadtrip">
+	<div class="container-fluid article roadtrip">
+		<div class="row">
+			<div class="col-md-12">
+				<h1>The Anti “Are We There Yet?” Road Trip</h1>
+				<h2>The Avenue of the Giants, a 30-mile stretch of Highway 101, is arguably one of America’s coolest drives.</h2>
+				<p>For a slice of Americana, complete with trees you can drive right through, take the family on a road trip along Highway 101. The route, starting from Phillipsville (roughly 225 miles north of San Francisco on the 101) and going north to Stafford, cuts through California’s Humboldt Redwoods State Park, home to the densest concentration of old-growth redwoods in the world. Here’s a guide for where to roam along this iconic stretch of road. It’s a drive so spectacular you may not hear an “Are we there yet?” the whole time.</p>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-6">
+				<ul class="scroll-list">
+					<li class="scroll-list-box">
+						<div class="box-header">
+							<div class="box-header-num">1</div>
+							First Stop:</br>Phillipsville
+						</div>
+						<p>Before you set out, fuel up on grass-fed-beef burgers, fresh baked goods, and soft-serve ice cream at the whimsical Chimney Tree Grill in the town of Phillipsville. The restaurant is next to the Living Chimney Tree, which was hollowed by a fire in 1914. Visitors can walk into the room-like space, entering through a front door, to check out the tree’s interior.</p>
+					</li>
+					<li class="scroll-list-box">
+						<div class="box-header">
+							<div class="box-header-num">2</div>
+							Myers Flat and</br>the Shrine Tree
+						</div>
+						<p>There are three redwoods you can drive a car through in California. The Shrine Drive-Tbrough iTree has the distinction of being the only one hollowed out by nature. Goose pens, as these interior spaces are known, are caused by fires, which burn out the interior of the tree but leave the exterior intact and alive. You’ll pay a small fee to pass through this privately owned redwood. Stop off in Myers Flat for the locally lauded Daily Grind espresso house or a visit to Riverbend Cellars for a laid back local wine tasting. If you have young kids, venture a mile farther to the Williams Grove day use area where you’ll access the Children’s Forest trail. This quiet, pretty 2-mile loop has plenty of fun exploration opportunities for little ones.</p>
+					</li>
+					<li class="scroll-list-box">
+						<div class="box-header">
+							<div class="box-header-num">3</div>
+							The Humboldt Redwoods</br>State Park Visitor’s Center
+						</div>
+						<p>This retro, 1930s visitor’s center near the town of Weott is both kitschy and educational. Three of the world’s remaining redwood species have been planted out front. Inside there’s a substantial history museum, as well as the world’s first RV, carved from a redwood trunk, which the owner drove around the country from 1917 to 1921 to raise awareness of the forests.</p>
+					</li>
+					<li class="scroll-list-box">
+						<div class="box-header one-line">
+							<div class="box-header-num">4</div>
+							Founder’s Grove
+						</div>
+						<p>Stop to explore the Dyerville Giant—estimated to be the world’s tallest tree when it toppled 25 years ago. When it crashed, people in the area thought there had been a train accident because of the explosive reverberation. It’s now a great opportunity to see a redwood root system, and there’s plenty of signage to learn about the forest.</p>
+					</li>
+					<li class="scroll-list-box">
+						<div class="box-header one-line">
+							<div class="box-header-num">5</div>
+							The Grieg-French-Bell Grove
+						</div>
+						<p>Fairytale lovers will marvel at this grove, most famous for the redwood sorrel ground cover. The dense, bright green foliage resembles four-leaf clovers, and it blankets the forest floor, rising and falling with the terrain. Pathways twist and turn among the trees in an incredible enchanted setting.</p>
+					</li>
+					<li class="scroll-list-box">
+						<div class="box-header one-line">
+							<div class="box-header-num">6</div>
+							Eternal Tree House
+						</div>
+						<p>About eight miles south of the Stafford end of the Avenue of the Giants sits the Eternal Tree House, a rustic roadside stop with a gift shop, restaurant, and a 20-square foot room located in the stump of one of the giants. Visitors to the house can leave their name in the guestbook before going back on the road.</p>
+					</li>
+				</ul>		
+			</div>
+		</div>
+	</div>
+</section>
+
 <script src="js/bootstrap.min.js"></script>
 </body>
 </html>
