--- a/index.html
+++ b/index.html
@@ -250,18 +250,19 @@
 </section> 
 
 <section class="bg-img-container-wrap" id="article-roadtrip">
-	<div class="container-fluid article roadtrip">
+	<div class="container-fluid article">
 		<div class="row">
-			<div class="col-md-12">
+			<div class="col-md-12 article-head">
 				<h1>The Anti “Are We There Yet?” Road Trip</h1>
 				<h2>The Avenue of the Giants, a 30-mile stretch of Highway 101, is arguably one of America’s coolest drives.</h2>
 				<p>For a slice of Americana, complete with trees you can drive right through, take the family on a road trip along Highway 101. The route, starting from Phillipsville (roughly 225 miles north of San Francisco on the 101) and going north to Stafford, cuts through California’s Humboldt Redwoods State Park, home to the densest concentration of old-growth redwoods in the world. Here’s a guide for where to roam along this iconic stretch of road. It’s a drive so spectacular you may not hear an “Are we there yet?” the whole time.</p>
 			</div>
 		</div>
-		<div class="row">
+		<div class="row" id="list-roadtrip">
 			<div class="col-md-12">
 				<ul class="scroll-list">
 					<li class="parallax-bg__empty">
+						<div id="roadtrip-circle"></div>
 						<div class="col-md-6">
 							<div class="scroll-list-box">
 								<div class="box-header">
@@ -273,6 +274,7 @@
 						</div>
 					</li>
 					<li class="parallax-bg__myers">
+						<!-- <div class="roadtrip-map-circle"></div> -->
 						<div class="col-md-6"> 
 							<div class="scroll-list-box">
 								<div class="box-header">
@@ -283,40 +285,48 @@
 							</div>
 						</div>
 					</li>
-					<li class="list-parallax-bg">
-						<div class="col-md-6 scroll-list-box">
-							<div class="box-header">
-								<div class="box-header-num">3</div>
-								<span class="stop-name">The Humboldt Redwoods</br>State Park Visitor’s Center</span>
+					<li class="parallax-bg__empty">
+						<div class="col-md-6">
+							<div class="scroll-list-box">
+								<div class="box-header">
+									<div class="box-header-num">3</div>
+									<span class="stop-name">The Humboldt Redwoods</br>State Park Visitor’s Center</span>
+								</div>
+								<p>This retro, 1930s visitor’s center near the town of Weott is both kitschy and educational. Three of the world’s remaining redwood species have been planted out front. Inside there’s a substantial history museum, as well as the world’s first RV, carved from a redwood trunk, which the owner drove around the country from 1917 to 1921 to raise awareness of the forests.</p>
 							</div>
-							<p>This retro, 1930s visitor’s center near the town of Weott is both kitschy and educational. Three of the world’s remaining redwood species have been planted out front. Inside there’s a substantial history museum, as well as the world’s first RV, carved from a redwood trunk, which the owner drove around the country from 1917 to 1921 to raise awareness of the forests.</p>
 						</div>
 					</li>
-					<li class="list-parallax-bg">
-						<div class="col-md-6 scroll-list-box">
-							<div class="box-header one-line">
-								<div class="box-header-num">4</div>
-								<span class="stop-name">Founder’s Grove</span>
+					<li class="parallax-bg__myers">
+						<div class="col-md-6">
+							<div class="scroll-list-box">
+								<div class="box-header one-line">
+									<div class="box-header-num">4</div>
+									<span class="stop-name">Founder’s Grove</span>
+								</div>
+								<p>Stop to explore the Dyerville Giant—estimated to be the world’s tallest tree when it toppled 25 years ago. When it crashed, people in the area thought there had been a train accident because of the explosive reverberation. It’s now a great opportunity to see a redwood root system, and there’s plenty of signage to learn about the forest.</p>
 							</div>
-							<p>Stop to explore the Dyerville Giant—estimated to be the world’s tallest tree when it toppled 25 years ago. When it crashed, people in the area thought there had been a train accident because of the explosive reverberation. It’s now a great opportunity to see a redwood root system, and there’s plenty of signage to learn about the forest.</p>
 						</div>
 					</li>
-					<li class="list-parallax-bg">
-						<div class="col-md-6 scroll-list-box">
-							<div class="box-header one-line">
-								<div class="box-header-num">5</div>
-								<span class="stop-name">The Grieg-French-Bell Grove</span>
+					<li class="parallax-bg__empty">
+						<div class="col-md-6">
+							<div class="scroll-list-box">
+								<div class="box-header one-line">
+									<div class="box-header-num">5</div>
+									<span class="stop-name">The Grieg-French-Bell Grove</span>
+								</div>
+								<p>Fairytale lovers will marvel at this grove, most famous for the redwood sorrel ground cover. The dense, bright green foliage resembles four-leaf clovers, and it blankets the forest floor, rising and falling with the terrain. Pathways twist and turn among the trees in an incredible enchanted setting.</p>
 							</div>
-							<p>Fairytale lovers will marvel at this grove, most famous for the redwood sorrel ground cover. The dense, bright green foliage resembles four-leaf clovers, and it blankets the forest floor, rising and falling with the terrain. Pathways twist and turn among the trees in an incredible enchanted setting.</p>
 						</div>
 					</li>
-					<li class="list-parallax-bg">
-						<div class="col-md-6 scroll-list-box">
-							<div class="box-header one-line">
-								<div class="box-header-num">6</div>
-								<span class="stop-name">Eternal Tree House</span>
+					<li class="parallax-bg__myers">
+						<div class="col-md-6">
+							<div class="scroll-list-box">
+								<div class="box-header one-line">
+									<div class="box-header-num">6</div>
+									<span class="stop-name">Eternal Tree House</span>
+								</div>
+								<p>About eight miles south of the Stafford end of the Avenue of the Giants sits the Eternal Tree House, a rustic roadside stop with a gift shop, restaurant, and a 20-square foot room located in the stump of one of the giants. Visitors to the house can leave their name in the guestbook before going back on the road.</p>
 							</div>
-							<p>About eight miles south of the Stafford end of the Avenue of the Giants sits the Eternal Tree House, a rustic roadside stop with a gift shop, restaurant, and a 20-square foot room located in the stump of one of the giants. Visitors to the house can leave their name in the guestbook before going back on the road.</p>
 						</div>
 					</li>
 				</ul>		
