Working to streamline header structures and styles
-Creating what will be the consistent header styles for all content
pieces and differentiating the blogger post header style.
-Organizing these styles in the CSS stylesheet.

--- a/index.html
+++ b/index.html
@@ -248,8 +248,20 @@
 		</div>
 	</div>
 </section> 
-
+<img class="section-marker" src="images/section-marker.png">
 <section class="bg-img-container-wrap" id="photo-op">
+	<div class="container-fluid article">
+		<div class="row">
+			<div class="col-md-12">
+				<h1>Photo Op: Share-Worthy</br>Northern California Spots</h1>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-8 col-md-offset-2">
+				<h2>Imagine a place where towering trees meet rugged coastline, and small friendly towns greet visitors with open arms (holding cups of artisanal coffee and mason jars of craft beer). Northern California, with its massive scale and otherworldly beauty, gives off an almost mystical vibe—the yin to Southern California’s yang. Here are four must-see spots for any family looking to capture some of Northern California’s charms. </h2>
+			</div>
+		</div>
+	</div>
 	<a href="#burney">
 		<ul class="hideContentWrap" id="burney">
 			<li class="hideContentHeader">Burney Falls</li>
