Populating "Kid's Attractions" Slideshow
Oops, forgot to switch to a new branch. All but images added.

--- a/index.html
+++ b/index.html
@@ -18,14 +18,6 @@
 <body>
 <script src="js/jquery-1.12.0.min.js"></script>
 <script src="js/script.js"></script>
-<script type="text/javascript">
-	$( document ).ready(function() {
-	    vpw = $(window).width();
-	    vph = $(window).height();
-
-	    $('.full-page').height(vph);
-	});
-</script>
 
 <section class="main-hero full-page">
 	<svg class="title-trtmnt" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 714.6 424.6">
@@ -249,7 +241,7 @@
 	</div>
 </section> 
 <img class="section-marker" src="images/section-marker.png">
-<section class="bg-img-container-wrap" id="photo-op">
+<section class="bg-img-container-wrap northern" id="photo-op">
 	<div class="container-fluid article">
 		<div class="row">
 			<div class="col-md-12">
@@ -298,6 +290,109 @@
 			<li class="hideContent">
 				<div class="text-box">
 					<p>After a drive north through towering redwood forests, you’ll most definitely know when you’ve stumbled upon this Victorian-architecture-laden town along the coast. Eureka, 280 miles north of San Francisco, is not only worth a visit in and of itself—stroll along the seaside boardwalk and on the streets of old town, stopping at the intriguing Clarke Historical Museum. About an hour from Eureka on Highway 299 go hunting for Bigfoot at the Willow Creek-China Flat Museum. You’ll find footprint casts, Bigfoot pictures, and a collection of other odds and ends.</p>
+				</div>
+			</li>
+		</ul>
+	</a>
+</section>
+<img class="section-marker" src="images/section-marker.png">
+<section class="bg-img-container-wrap northern" id="kid-attractions">
+	<div class="container-fluid article">
+		<div class="row">
+			<div class="col-md-12">
+				<h1>Must-See Kid-Friendly Attractions</h1>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-8 col-md-offset-2">
+				<h2>Some of the wider-known theme parks reside in the southern part of the state, but Northern California is home to wonder-filled theme parks, animal attractions, and summertime amusements. With so many exciting adventures to choose from, the only question is where to go first. So here, a few of the area’s main enticements to get you started.</h2>
+			</div>
+		</div>
+	</div>
+	<a href="#great-america">
+		<ul class="hideContentWrap" id="great-america">
+			<li class="hideContentHeader">Something for Everyone</li>
+			<li class="hideContent">
+				<h4>California’s Great America</h4>
+				<div class="text-box">
+					<p>This park features 53 rides, live entertainment, and a water park—certain to please everyone from pint-sized adventurers to older thrill-seekers. Spine-tingling rides include the Xtreme Skyflyer that re-creates the experience of skydiving, while tamer pursuits, such as bumper cars, are also plentiful. A dynamic new 4-D attraction, developed in partnership with Electronic Arts based on the game series Mass Effect™ and featuring customized technology for the park, will take guests on an adventure through the galaxy. After the thrills, the park’s regularly scheduled fireworks displays will end your day with a bang.</p>
+				</div>
+			</li>
+		</ul>
+	</a>
+	<a href="#gilroy">
+		<ul class="hideContentWrap" id="gilroy">
+			<li class="hideContentHeader">Natural Wonders</li>
+			<li class="hideContent">
+				<h4>Gilroy Gardens Family Theme Park</h4>
+				<div class="text-box">
+					<p>Think traditional amusement park for younger kids with an earth-friendly twist. Each of the park’s 40 rides and attractions, including a Ferris wheel and carousels, are built around six lush gardens. There are also learning sheds showing vignettes on conservation and the park’s greenery. Gilroy is also home to the Circus Trees, which are trees shaped and woven together to create complex designs, a basket, arch and zig-zag. The park’s water-filled play areas will let you make a splash on even the hottest of days.</p>
+				</div>
+			</li>
+		</ul>
+	</a>
+	<a href="#discov-kingdom">
+		<ul class="hideContentWrap" id="discov-kingdom">
+			<li class="hideContentHeader">Animal Attractions</li>
+			<li class="hideContent">
+				<h4>Six Flags Discovery Kingdom</h4>
+				<div class="text-box">
+					<p>Your kids can get up close and personal with wildlife at Six Flags Discovery Kingdom. Throughout the park, there are opportunities to experience exotic wildlife, such as observing dolphins at play through an underwater viewing window, or tigers relaxing by their pool. You can also feed a giraffe, seal, or sea lion, see penguins and walruses swim or touch a stingray. Check out animal shows, exhibits, and demonstrations, or the 42 rides including The Joker, the newest and most thrilling coaster, and Medusa, Northern California's tallest, longest, and fastest roller coaster.</p>
+				</div>
+			</li>
+		</ul>
+	</a>
+	<a href="#chil-fairyland">
+		<ul class="hideContentWrap" id="chil-fairyland">
+			<li class="hideContentHeader">Where Dreams Come True</li>
+			<li class="hideContent">
+				<h4>Children’s Fairyland</h4>
+				<div class="text-box">
+					<p>Children’s Fairyland first debuted its 10 acres of gardens and themed sets for children ages eight and under on the shores of Lake Merritt in 1950. The park was Walt Disney’s major inspiration for the theme park he created five years later. Here, tots can interact with life-size sets depicting scenes from classic storybooks, such as Pinocchio’s castle, as well as meet ponies, goats, and sheep. There are also child-size rides like carousels and a mini Ferris wheel. Make sure to catch a show at the Storybook Puppet Theater, which launched the careers of many famous puppeteers.</p>
+				</div>
+			</li>
+		</ul>
+	</a>
+	<a href="#safari-west">
+		<ul class="hideContentWrap" id="safari-west">
+			<li class="hideContentHeader">Wild Things</li>
+			<li class="hideContent">
+				<h4>Safari West</h4>
+				<div class="text-box">
+					<p>With more than 400 acres of wildlife preserve and 900 different animals representing 90 species, Safari West re-creates a day in the wild—in the heart of California wine country. Safari tours in a double-decker Korean War Vintage Power Wagons run three hours and bring you into contact with gazelles, giraffes, zebras, antelope, and other fauna and flora indigenous to Northern Tanzania. You can even “camp” in a luxury safari tent complete with hardwood floors, beds, and full bathrooms, falling asleep to the calls of exotic birds.</p>
+				</div>
+			</li>
+		</ul>
+	</a>
+	<a href="#fairytale-town">
+		<ul class="hideContentWrap" id="fairytale-town">
+			<li class="hideContentHeader">Tall Tales for Tiny Tots</li>
+			<li class="hideContent">
+				<h4>Fairytale Town</h4>
+				<div class="text-box">
+					<p>Built in 1959 inside William Land Park, Fairytale Town boasts 25 playsets based on different nursery rhymes and fairy tales, including Farmer Brown’s Barn that is home to three blind mice, a schoolhouse with Mary’s Little Lambs, which has real sheep grazing, and an Old Woman in the Shoe slide. Little ones can also meet a miniature Sicilian donkey named Eeyore, as well as Charlotte the spider and Daisy the cow, a miniature Hereford heifer.</p>
+				</div>
+			</li>
+		</ul>
+	</a>
+	<a href="#sac-zoo">
+		<ul class="hideContentWrap" id="sac-zoo">
+			<li class="hideContentHeader">Animal Instincts</li>
+			<li class="hideContent">
+				<h4>Sacramento Zoo</h4>
+				<div class="text-box">
+					<p>Wear comfortable walking shoes when you visit, because the Sacramento Zoo spans 14.5 acres, and you’ll want to see all of it. The zoo is home to over 500 animals of more than 140 different species, including red pandas, snow leopards, eagles, and various reptiles. If you’re looking for more than a leisurely stroll and casual viewing, you can sign up for educational classes and day camps. And if you want to see the animals in action at all hours, you can bring a tent and sleeping bags for a back-to-nature overnighter.</p>
+				</div>
+			</li>
+		</ul>
+	</a>
+	<a href="#funderland">
+		<ul class="hideContentWrap" id="funderland">
+			<li class="hideContentHeader">Toddler Town</li>
+			<li class="hideContent">
+				<h4>Funderland Amusement Park</h4>
+				<div class="text-box">
+					<p>Perfect for peewee adventurers, this small-scale amusement park is adjacent to the Sacramento Zoo and Fairytale Town, and features nine child-sized rides, seven of which can accommodate two-year-olds. Knee-high daredevils can ride the Flying Dragon Roller Coaster, spin in the Crazy Cups, and fly in a swinging log on the Squirrelly Whirl. There are also scaled-down boats, cars, trains, and planes for climbing on and exploring. You can also all pile into one of the Backroads Buggies, Funderland’s classic cars that let little drivers zoom around the park. </p>
 				</div>
 			</li>
 		</ul>
