--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
 	    $('.full-page').height(vph);
 	});
 </script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"> </script>
+<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
 
 <section class="main-hero full-page">
 	<svg class="title-trtmnt" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 714.6 424.6">
@@ -259,11 +261,12 @@
 				<p>For a slice of Americana, complete with trees you can drive right through, take the family on a road trip along Highway 101. The route, starting from Phillipsville (roughly 225 miles north of San Francisco on the 101) and going north to Stafford, cuts through California’s Humboldt Redwoods State Park, home to the densest concentration of old-growth redwoods in the world. Here’s a guide for where to roam along this iconic stretch of road. It’s a drive so spectacular you may not hear an “Are we there yet?” the whole time.</p>
 			</div>
 		</div>
-		<div class="row" id="list-roadtrip">
+		<div class="row">
 			<div class="col-md-12">
 				<ul class="scroll-list">
-					<li class="parallax-bg__empty">
-						<div id="roadtrip-circle"></div>
+					<li class="parallax-bg__empty" id="list-roadtrip">
+						<div class="roadtrip-circle" id="roadtrip-circle-1">
+						</div>
 						<div class="col-md-6">
 							<div class="scroll-list-box">
 								<div class="box-header">
@@ -275,7 +278,6 @@
 						</div>
 					</li>
 					<li class="parallax-bg__myers">
-						<!-- <div class="roadtrip-map-circle"></div> -->
 						<div class="col-md-6"> 
 							<div class="scroll-list-box">
 								<div class="box-header">
@@ -308,7 +310,7 @@
 							</div>
 						</div>
 					</li>
-					<li class="parallax-bg__empty">
+					<li class="parallax-bg__empty" id="last-roadtrip">
 						<div class="col-md-6">
 							<div class="scroll-list-box">
 								<div class="box-header one-line">
@@ -329,6 +331,7 @@
 								<p>About eight miles south of the Stafford end of the Avenue of the Giants sits the Eternal Tree House, a rustic roadside stop with a gift shop, restaurant, and a 20-square foot room located in the stump of one of the giants. Visitors to the house can leave their name in the guestbook before going back on the road.</p>
 							</div>
 						</div>
+						<div class="roadtrip-circle" id="roadtrip-circle-2">
 					</li>
 				</ul>		
 			</div>
