Fixed Map Positioning
Had to add !important to transform to negate API element.style; will
have to note for dealing with responsive.

--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
 			<div class="col-md-12">
 				<ul class="scroll-list">
 					<li class="parallax-bg__empty" id="list-roadtrip">
-						<div class="roadtrip-circle" id="roadtrip-circle-1">
+						<div class="roadtrip-circle" id="roadtrip-circle-1" style="transform: none">
 						</div>
 						<div class="col-md-6">
 							<div class="scroll-list-box">
